@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -92,7 +92,7 @@ public class EventAnyTest {
 
     @Test
     public void testEventDelivery() throws Exception {
-        Node n = (Node) target.newInstance();
+        Node n = (Node) target.getDeclaredConstructor().newInstance();
         delivered = false;
 
         n.addEventHandler(type, event1 -> {
