@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -111,6 +111,7 @@ public class FXMLLoader {
         new RuntimePermission("getClassLoader");
 
     // Instance of StackWalker used to get caller class (must be private)
+    @SuppressWarnings("removal")
     private static final StackWalker walker =
         AccessController.doPrivileged((PrivilegedAction<StackWalker>) () ->
             StackWalker.getInstance(StackWalker.Option.RETAIN_CLASS_REFERENCE));
@@ -935,14 +936,12 @@ public class FXMLLoader {
                         try {
                             if (controllerFactory == null) {
                                 ReflectUtil.checkPackageAccess(type);
-                                setController(type.newInstance());
+                                setController(type.getDeclaredConstructor().newInstance());
                             } else {
                                 setController(controllerFactory.call(type));
                             }
-                        } catch (InstantiationException exception) {
-                            throw constructLoadException(exception);
-                        } catch (IllegalAccessException exception) {
-                            throw constructLoadException(exception);
+                        } catch (Exception e) {
+                            throw constructLoadException(e);
                         }
                     }
                 } else {
@@ -1018,11 +1017,9 @@ public class FXMLLoader {
                 if (value == null) {
                     try {
                         ReflectUtil.checkPackageAccess(type);
-                        value = type.newInstance();
-                    } catch (InstantiationException exception) {
-                        throw constructLoadException(exception);
-                    } catch (IllegalAccessException exception) {
-                        throw constructLoadException(exception);
+                        value = type.getDeclaredConstructor().newInstance();
+                    } catch (Exception e) {
+                        throw constructLoadException(e);
                     }
                 }
             }
@@ -1328,11 +1325,9 @@ public class FXMLLoader {
                     if (value == null) {
                         try {
                             ReflectUtil.checkPackageAccess(type);
-                            value = type.newInstance();
-                        } catch (InstantiationException exception) {
-                            throw constructLoadException(exception);
-                        } catch (IllegalAccessException exception) {
-                            throw constructLoadException(exception);
+                            value = type.getDeclaredConstructor().newInstance();
+                        } catch (Exception e) {
+                            throw constructLoadException(e);
                         }
                     }
                     root = value;
@@ -2128,12 +2123,14 @@ public class FXMLLoader {
     public static final String FX_NAMESPACE_VERSION = "1";
 
     static {
-        JAVAFX_VERSION = AccessController.doPrivileged(new PrivilegedAction<String>() {
+        @SuppressWarnings("removal")
+        String tmp = AccessController.doPrivileged(new PrivilegedAction<String>() {
             @Override
             public String run() {
                 return System.getProperty("javafx.version");
             }
         });
+        JAVAFX_VERSION = tmp;
 
         FXMLLoaderHelper.setFXMLLoaderAccessor(new FXMLLoaderHelper.FXMLLoaderAccessor() {
             @Override
@@ -2434,6 +2431,7 @@ public class FXMLLoader {
      */
     public ClassLoader getClassLoader() {
         if (classLoader == null) {
+            @SuppressWarnings("removal")
             final SecurityManager sm = System.getSecurityManager();
             final Class caller = (sm != null) ?
                     walker.getCallerClass() :
@@ -2513,6 +2511,7 @@ public class FXMLLoader {
      *
      * @since JavaFX 2.1
      */
+    @SuppressWarnings("removal")
     public <T> T load() throws IOException {
         return loadImpl((System.getSecurityManager() != null)
                             ? walker.getCallerClass()
@@ -2528,6 +2527,7 @@ public class FXMLLoader {
      * @throws IOException if an error occurs during loading
      * @return the loaded object hierarchy
      */
+    @SuppressWarnings("removal")
     public <T> T load(InputStream inputStream) throws IOException {
         return loadImpl(inputStream, (System.getSecurityManager() != null)
                                          ? walker.getCallerClass()
@@ -3136,6 +3136,7 @@ public class FXMLLoader {
 
     private static ClassLoader getDefaultClassLoader(Class caller) {
         if (defaultClassLoader == null) {
+            @SuppressWarnings("removal")
             final SecurityManager sm = System.getSecurityManager();
             if (sm != null) {
                 if (needsClassLoaderPermissionCheck(caller)) {
@@ -3153,6 +3154,7 @@ public class FXMLLoader {
      * @since JavaFX 2.1
      */
     public static ClassLoader getDefaultClassLoader() {
+        @SuppressWarnings("removal")
         final SecurityManager sm = System.getSecurityManager();
         final Class caller = (sm != null) ?
                 walker.getCallerClass() :
@@ -3171,6 +3173,7 @@ public class FXMLLoader {
         if (defaultClassLoader == null) {
             throw new NullPointerException();
         }
+        @SuppressWarnings("removal")
         final SecurityManager sm = System.getSecurityManager();
         if (sm != null) {
             sm.checkPermission(MODIFY_FXML_CLASS_LOADER_PERMISSION);
@@ -3188,6 +3191,7 @@ public class FXMLLoader {
      * @throws IOException if an error occurs during loading
      * @return the loaded object hierarchy
      */
+    @SuppressWarnings("removal")
     public static <T> T load(URL location) throws IOException {
         return loadImpl(location, (System.getSecurityManager() != null)
                                       ? walker.getCallerClass()
@@ -3209,6 +3213,7 @@ public class FXMLLoader {
      * @throws IOException if an error occurs during loading
      * @return the loaded object hierarchy
      */
+    @SuppressWarnings("removal")
     public static <T> T load(URL location, ResourceBundle resources)
                                      throws IOException {
         return loadImpl(location, resources,
@@ -3234,6 +3239,7 @@ public class FXMLLoader {
      * @throws IOException if an error occurs during loading
      * @return the loaded object hierarchy
      */
+    @SuppressWarnings("removal")
     public static <T> T load(URL location, ResourceBundle resources,
                              BuilderFactory builderFactory)
                                      throws IOException {
@@ -3263,6 +3269,7 @@ public class FXMLLoader {
      *
      * @since JavaFX 2.1
      */
+    @SuppressWarnings("removal")
     public static <T> T load(URL location, ResourceBundle resources,
                              BuilderFactory builderFactory,
                              Callback<Class<?>, Object> controllerFactory)
@@ -3296,6 +3303,7 @@ public class FXMLLoader {
      *
      * @since JavaFX 2.1
      */
+    @SuppressWarnings("removal")
     public static <T> T load(URL location, ResourceBundle resources,
                              BuilderFactory builderFactory,
                              Callback<Class<?>, Object> controllerFactory,
@@ -3402,6 +3410,7 @@ public class FXMLLoader {
     }
 
     private static void checkClassLoaderPermission() {
+        @SuppressWarnings("removal")
         final SecurityManager securityManager = System.getSecurityManager();
         if (securityManager != null) {
             securityManager.checkPermission(MODIFY_FXML_CLASS_LOADER_PERMISSION);
@@ -3522,7 +3531,8 @@ public class FXMLLoader {
                                  membersType);
 
             final int finalAllowedMemberAccess = allowedMemberAccess;
-            AccessController.doPrivileged(
+            @SuppressWarnings("removal")
+            var dummy = AccessController.doPrivileged(
                     new PrivilegedAction<Void>() {
                         @Override
                         public Void run() {
