@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -43,7 +43,7 @@ public class TestTouchDevices {
             }
             try {
                 devices.add((TestTouchDevice)
-                                    Class.forName(selectedDeviceClass).newInstance());
+                                    Class.forName(selectedDeviceClass).getDeclaredConstructor().newInstance());
             } catch (Exception e) {
                 e.printStackTrace();
             }
